<resources>
    <string name="app_name">Trip Planner</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="signup_btn">Sign Up</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="cancel_btn">Cancel</string>
    <string name="title_activity_trip__home">Trip_Home</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_name">Enter Trip Name</string>
    <string name="Traveldate">Travel Date</string>
    <string name="serach_city">Select Destination City</string>


    <string-array name="types_array">
        <item>Select type of place</item>
        <item>restaurant</item>
        <item>airport</item>
        <item>museum</item>
        <item>city hall</item>
        <item>shopping mall</item>

    </string-array>
</resources>
