<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTripFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border_edittext"
            android:hint="@string/trip_name"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            android:textSize="18dp"
            app:layout_constraintEnd_toStartOf="@+id/trip_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/trip_date"
            android:layout_width="155dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border_edittext"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/Traveldate"
            android:inputType="date"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/search_city"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_border_edittext"
            android:completionThreshold="1"
            android:ems="10"
            android:hint="@string/serach_city"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:paddingRight="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trip_date" />

        <Spinner
            android:id="@+id/type_spinner"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="10dp"

            android:background="@drawable/spinner_layout"
            android:entries="@array/types_array"
            android:popupBackground="@drawable/rounded_border_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_city" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Save_floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/tick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>